# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/: my_workflow.yml
.github/workflows/: my_workflow.yml
page_analyzer/: __init__.py  app.py  checks.py  db.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
